# PROCESAMIENTO-_SEGMENTACI-N_DE_IM-GENES_M-DICAS

./: CMakeLists.txt
data/L192/: L192_FD_1_SHARP_1.CT.0002.0001.2016.01.21.18.17.57.277560.404382016.IMA  L192_FD_1_SHARP_1.CT.0002.0002.2016.01.21.18.17.57.277560.404382040.IMA  L192_FD_1_SHARP_1.CT.0002.0003.2016.01.21.18.17.57.277560.404382064.IMA  L192_FD_1_SHARP_1.CT.0002.0004.2016.01.21.18.17.57.277560.404382088.IMA  L192_FD_1_SHARP_1.CT.0002.0005.2016.01.21.18.17.57.277560.404382112.IMA  L192_FD_1_SHARP_1.CT.0002.0006.2016.01.21.18.17.57.277560.404382136.IMA  L192_FD_1_SHARP_1.CT.0002.0007.2016.01.21.18.17.57.277560.404382160.IMA  L192_FD_1_SHARP_1.CT.0002.0008.2016.01.21.18.17.57.277560.404382184.IMA
gui_qt/: CMakeLists.txt
gui_qt/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  opencv_bridge.cpp  opencv_bridge.h
models/: dncnn_final.onnx
src/: contours.cpp  contours.h  deep_denoise.cpp  deep_denoise.h  itk_loader.cpp  itk_loader.h  main.cpp  metrics.cpp  metrics.h  morphology.cpp  morphology.h  preprocessing.cpp  preprocessing.h  segmentation.cpp  segmentation.h  test_dnn  test_dnn.cpp  utils.cpp  utils.h
